[package]

name = "hyper"
version = "0.8.0-mio"
description = "A modern HTTP library."
readme = "README.md"
documentation = "http://hyperium.github.io/hyper/hyper/index.html"
repository = "https://github.com/hyperium/hyper"
license = "MIT"
authors = ["Sean McArthur <sean.monstar@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>"]
keywords = ["http", "hyper", "hyperium"]

[dependencies]
httparse = "1.0"
language-tags = "0.2"
log = "0.3"
mime = "0.1"
mio = "0.5"
rotor = {git="https://github.com/tailhook/rotor"} #"0.5.1"
rustc-serialize = "0.3"
time = "0.1"
traitobject = "0.0.1"
typeable = "0.1"
unicase = "1.0"
url = "0.5"
vecio = "0.1"

[dependencies.cookie]
version = "0.2"
default-features = false

[dependencies.openssl]
version = "0.7"
optional = true

[dependencies.solicit]
version = "0.4"
default-features = false

[dependencies.serde]
version = "0.6"
optional = true

[dev-dependencies]
env_logger = "0.3"

[features]
default = []
ssl = ["openssl", "cookie/secure"]
serde-serialization = ["serde"]
nightly = []
